--- a/eAppointmentClient/src/index.html
+++ b/eAppointmentClient/src/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="container">
     <app-root></app-root>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
