--- a/eAppointmentClient/src/index.html
+++ b/eAppointmentClient/src/index.html
@@ -14,6 +14,10 @@
   <body class="container">
     <app-root></app-root>
 
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script
       src="https://kit.fontawesome.com/0ba668380d.js"
